update some features